--- a/empresa/index.html
+++ b/empresa/index.html
@@ -96,10 +96,10 @@
                                 <a class="nav-link" href="#">Início<span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Produtos</a>
+                                <a class="nav-link" href="produtos.html">Produtos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Cartão Fidelidade</a>
+                                <a class="nav-link" href="cartao.html">Cartão Fidelidade</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="localizacao.html">Localização</a>
@@ -228,7 +228,7 @@
             <div class="col-sm-5 col-xs-5 col-lg-5 col-md-5 cartaoReceita mb-3" style="">
                 <div class="widget_receita">
                     <div class="img_rec">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR9UTf9v_pSREySddIxG9tdTE8AE_yylVsR-lhf8vVCLgr3Be-y"
+                        <img src="assets/img/rec1.jpeg"
                         class="" alt="..." width="100%">
                     </div>
                     <div class="text_rec">
