--- a/empresa/localizacao.html
+++ b/empresa/localizacao.html
@@ -96,10 +96,10 @@
                                 <a class="nav-link" href="index.html">Início</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Produtos</a>
+                                <a class="nav-link" href="produtos.html">Produtos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Cartão Fidelidade</a>
+                                <a class="nav-link" href="cartao.html">Cartão Fidelidade</a>
                             </li>
                             <li class="nav-item active">
                                 <a class="nav-link" href="localizacao.html">Localização <span
@@ -139,7 +139,7 @@
                             <h2 class="mb-0">
                                 <button class="btn btn-link" type="button" data-toggle="collapse"
                                     data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Collapsible Group Item #1
+                                    Loja #1
                                 </button>
                             </h2>
                         </div>
@@ -162,7 +162,7 @@
                             <h2 class="mb-0">
                                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                                     data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    Collapsible Group Item #2
+                                    Loja #2
                                 </button>
                             </h2>
                         </div>
@@ -184,7 +184,7 @@
                             <h2 class="mb-0">
                                 <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
                                     data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    Collapsible Group Item #3
+                                    Loja #3
                                 </button>
                             </h2>
                         </div>
