--- a/empresa/produtos.html
+++ b/empresa/produtos.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- SEO Geral-->
-    <title>Sobre</title>
+    <title>Localização</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <meta name="description" content="A maior distribuidora de ovos do Maranhão. Há mais de 20 anos no mercado.">
     <!--Desrição e até 150 caracteres, mostrada na busca-->
@@ -40,7 +40,7 @@
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/index.css">
-    <link rel="stylesheet" href="assets/css/sobre.css">
+    <link rel="stylesheet" href="assets/css/localizacao.css">
     <link rel="stylesheet" href="assets/css/animacao.css">
     <link rel="shortcut icon" href="assets/img/favicon.ico" />
     <script>
@@ -53,7 +53,6 @@
 
 <body>
     <div class="container-fluid">
-
         <div id="preloader">
             <div class="inner">
                 <!-- HTML DA ANIMAÇÃO PRELOADER! -->
@@ -64,7 +63,6 @@
                 </div>
             </div>
         </div>
-
         <div class="row redeSocial">
             <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12" style="padding: 0;">
                 <ul>
@@ -96,7 +94,8 @@
                                 <a class="nav-link" href="index.html">Início</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="produtos.html">Produtos</a>
+                                <a class="nav-link active" href="produtos.html">Produtos<span
+                                    class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="cartao.html">Cartão Fidelidade</a>
@@ -104,8 +103,8 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="localizacao.html">Localização</a>
                             </li>
-                            <li class="nav-item active">
-                                <a class="nav-link" href="sobre.html">Sobre <span class="sr-only">(current)</span></a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="sobre.html">Sobre</a>
                             </li>
                             <li class="nav-item" style="display: none;">
                                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -115,73 +114,46 @@
                 </nav>
             </div>
         </header>
-        <div class="row meio">
-            <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12">
-                &nbsp;
+        <footer class="row pt-3">
+            <div class="col-sm-5 col-md-5 col-lg-5 col-xs-5 pl-2"
+                style="max-height: 140px; padding: 0px; color: white;;">
+                <img src="assets/img/capire.png"" width=" 180px" alt=""></br>
+                <span><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;ovolar@hotmail.com</span></br>
+                <span><i class="fa fa-phone" aria-hidden="true"></i>&nbsp;(98)981969799</span></br>
+                <span><i class="fa fa-instagram" aria-hidden="true"></i>&nbsp;@ovolar_</span></br>
             </div>
-        </div>
-        <div class="row p-4">
-            <div class="col-sm-6 col-lg-6 col-xs-6 col-lg-6">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQl4sR6H3o49KitukvgHZ1sYqUUq4gjNNl8fJ--CyT_qi2CAfgI" alt="" width="100%" style="border-radius: 0.4rem;">
-            </div>
-            <div class="col-sm-6 col-lg-6 col-xs-6 col-lg-6">
-                <div class="textoSobre">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam repellendus aperiam hic possimus odio, laborum magnam id, ducimus, ad perferendis at. Voluptas illum tenetur id quaerat laboriosam odit rerum reiciendis.
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae dolores atque quisquam nihil doloremque quam quo consequuntur corrupti, architecto, laboriosam qui numquam accusamus vitae placeat voluptate? Quisquam quibusdam voluptas voluptatum.
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos ipsum amet beatae! Repellat dolore nihil impedit laudantium vero, voluptatibus molestias minus cumque itaque neque architecto quas non numquam sequi quos
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="row meio">
-                <div class="col-sm-12 col-lg-12 col-xs-12 col-md-12">
-                    &nbsp;
+            <div class="col-sm-4 col-md-4 col-lg-4 col-xs-4">
+                <div style="float: right; color: white;" class="">
+                    <strong>INFORMAÇÕES</strong></br>
+                    <ul>
+                        <li>Sobre nós</li>
+                        <li>Produtos</li>
+                        <li>Localização</li>
+                        <li>Ovo é Saúde</li>
+                        <li>Cartão fidelidade</li>
+                        <li>Cadastrar-se</li>
+                    </ul>
                 </div>
             </div>
-            <footer class="row pt-3">
-                <div class="col-sm-5 col-md-5 col-lg-5 col-xs-5 pl-2" style="max-height: 140px; padding: 0px; color: white;;">
-                    <img src="assets/img/capire.png"" width="180px" alt=""></br>
-                    <span><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;ovolar@hotmail.com</span></br>
-                    <span><i class="fa fa-phone" aria-hidden="true"></i>&nbsp;(98)981969799</span></br>
-                    <span><i class="fa fa-instagram" aria-hidden="true"></i>&nbsp;@ovolar_</span></br>
+            <div class="col-sm-3 col-xs-3 col-lg-3 col-md-3 text-center">
+                <div style="float: right; color: white;" class="">
+                    <strong>DÚVIDAS E SUPORTE</strong></br>
+                    <ul>
+                        <li>Dúvidas frequentes</li>
+                        <li>Termos de uso</li>
+                        <li>Segurança e privacidade</li>
+                        <li>Trocas e arrependimento</li>
+                        <li>&nbsp;</li>
+                        <li>Cadastrar-se</li>
+                    </ul>
                 </div>
-                <div class="col-sm-4 col-md-4 col-lg-4 col-xs-4">
-                    <div style="float: right; color: white;" class="">
-                        <strong>INFORMAÇÕES</strong></br>
-                        <ul>
-                            <li>Sobre nós</li>
-                            <li>Produtos</li>
-                            <li>Localização</li>
-                            <li>Ovo é Saúde</li>
-                            <li>Cartão fidelidade</li>
-                            <li>Cadastrar-se</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-3 col-xs-3 col-lg-3 col-md-3 text-center">
-                    <div style="float: right; color: white;" class="">
-                        <strong>DÚVIDAS E SUPORTE</strong></br>
-                        <ul>
-                            <li>Dúvidas frequentes</li>
-                            <li>Termos de uso</li>
-                            <li>Segurança e privacidade</li>
-                            <li>Trocas e arrependimento</li>
-                            <li>&nbsp;</li>
-                            <li>Cadastrar-se</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12 p-2 text-center"
-                    style="background-color: black; color: gray;">
-                    Copyright &copy; 2019 - Ovolar Distribuidora de Ovos - Desenvolvido por Nativo Sistemas - Criação de
-                    Sistemas
-                </div>
-            </footer>
+            </div>
+            <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12 p-2 text-center"
+                style="background-color: black; color: gray;">
+                Copyright &copy; 2019 - Ovolar Distribuidora de Ovos - Desenvolvido por Nativo Sistemas - Criação de
+                Sistemas
+            </div>
+        </footer>
     </div>
 </body>
 
