--- a/empresa/produtos.html
+++ b/empresa/produtos.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- SEO Geral-->
-    <title>Localização</title>
+    <title>Produtos</title>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <meta name="description" content="A maior distribuidora de ovos do Maranhão. Há mais de 20 anos no mercado.">
     <!--Desrição e até 150 caracteres, mostrada na busca-->
