--- a/empresa/index.html
+++ b/empresa/index.html
@@ -99,7 +99,7 @@
         </div>
 
         <a id="subirTopo">
-            <i class="fa fa-hand-pointer-o" aria-hidden="true"></i>
+            <i class="fa fa-arrow-circle-up" aria-hidden="true"></i>
         </a>
 
         <div class="row redeSocial">
@@ -211,7 +211,7 @@
                 <span style="font-size: 1.2rem; width: 100%; border-radius: 0px; padding: 0.7rem;"
                     class="badge badge-dark quicksandbold">Produtos</span>
             </div>
-            <div class="col-sm-6 col-md-3 col-xs-3 col-lg-3 mb-2">
+            <div class="col-sm-6 col-md-6 col-xs-3 col-lg-4 mb-2 col-xl-3">
                 <div class="card" style="width: 18rem;">
                     <img src="https://www.galaxcms.com.br/imgs_crud_comum/1826/Ovos---Tipo-Jumbo-20181127233219_400.jpg"
                         class="card-img-top" alt="..." height="200px">
@@ -222,7 +222,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-3 col-xs-3 col-lg-3 mb-2">
+            <div class="col-sm-6 col-md-6 col-xs-3 col-lg-4 mb-2 col-xl-3">
                 <div class="card" style="width: 18rem;">
                     <img src="assets/img/tipo-extra.png" class="card-img-top" alt="..." height="200px">
                     <div class="card-body">
@@ -232,7 +232,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-3 col-xs-3 col-lg-3 mb-2">
+            <div class="col-sm-6 col-md-6 col-xs-3 col-lg-4 mb-2 col-xl-3">
                 <div class="card" style="width: 18rem;">
                     <img src="assets/img/tipo-vermelho.jpg" class="card-img-top" alt="..." height="200px">
                     <div class="card-body">
@@ -242,7 +242,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-3 col-xs-3 col-lg-3 mb-2">
+            <div class="col-sm-6 col-md-6 col-xs-3 col-lg-4 mb-2 col-xl-3">
                 <div class="card" style="width: 18rem;">
                     <img src="assets/img/tipo-codorna.jpg" class="card-img-top" alt="..." height="200px">
                     <div class="card-body">
