reorganização das pastas

--- a/empresa/index.html
+++ b/empresa/index.html
@@ -99,7 +99,7 @@
         </div>
 
         <a id="subirTopo">
-            <i class="fa fa-arrow-circle-up" aria-hidden="true"></i>
+            <i class="fa fa-arrow-up fa-2x" aria-hidden="true"></i>
         </a>
 
         <div class="row redeSocial">
