--- a/empresa1/index.html
+++ b/empresa1/index.html
@@ -457,7 +457,7 @@
                 navText: ["Anterior", "Próximo"],
                 autoplay: true,
                 autoplayTimeout: 1500,
-                dots: true, //define se as bolinhas devem aparecer ou não,
+                dots: true, //define se os pontos devem aparecer ou não,
                 /*resposive: {
                     0: {
                         items: 1
