--- a/empresa1/index.html
+++ b/empresa1/index.html
@@ -20,7 +20,7 @@
         }
 
         .p1 {
-            background-image: url('up_f.png');
+            background-image: url('assets/img/up_f.png');
             background-repeat: no-repeat;
             background-size: 100%;
             background-origin: content-box;
@@ -106,7 +106,7 @@
             <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <a class="navbar-brand" href="#">
-                        <img src="logo.png" alt="" width="60%;">
+                        <img src="assets/img/logo.png" alt="" width="60%;">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
