--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <ul>
-        <li><a href="https://emanoellucasml.github.io/empresa">empresa</a></li>
-        <li><a href="https://emanoellucasml.github.io/empresa1">empresa1</a></li>
-        <li><a href="https://emanoellucasml.github.io/tempodeaprender">é tempo de aprender</a></li>
+        <li><a href="https://emanoellucasml.github.io/empresa">Empresa</a></li>
+        <li><a href="https://emanoellucasml.github.io/empresa1">Empresa1</a></li>
+        <li><a href="https://emanoellucasml.github.io/tempodeaprender">É tempo de aprender</a></li>
     </ul>
 </body>
 </html>
