--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <ul>
         <li><a href="https://emanoellucasml.github.io/empresa">Empresa</a></li>
-        <li><a href="https://emanoellucasml.herokuapp.com">Empresa1</a></li>
+        <li><a href="https://emanoellucas.herokuapp.com" target="_blank">Empresa1</a></li>
         <li><a href="https://emanoellucasml.github.io/tempodeaprender">É tempo de aprender</a></li>
     </ul>
 </body>
