--- a/tempodeaprender/conteudo/introducao/introducao.html
+++ b/tempodeaprender/conteudo/introducao/introducao.html
@@ -31,6 +31,7 @@
 			background-color: #559041;
 			border-radius: 1rem;
 			color: white;
+			z-index: 999;
 			
 		}
 
@@ -43,6 +44,7 @@
 			background-color: #559041;
 			color: white;
 			border-radius: 1rem;
+			z-index: 999;
 		}
 
 		#botao-direito:hover {
@@ -99,12 +101,12 @@
 			</div>
 		</div>
 	</div>
+	<iframe id="iframe" src="0.html" width="100%" height="670px" frameborder="0"></iframe>
 	<div id="botao-esquerdo" onclick="anterior()"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
 	</div>
 	<div id="botao-direito" onclick="proximo()"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
 	</div>
 	</div>
-	<iframe id="iframe" src="0.html" width="100%" height="600px" frameborder="0"></iframe>
 </body>
 
 </html>
