preloader e fonte introducao

--- a/tempodeaprender/conteudo/introducao/1.html
+++ b/tempodeaprender/conteudo/introducao/1.html
@@ -7,21 +7,41 @@
 	<link rel="stylesheet" href="style/introducao.css" type="text/css">
 	<link rel="stylesheet" href="../estilo/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Catamaran&display=swap" rel="stylesheet">
-	<script src="../../assets/js/jquery-3.4.1.min.js"></script>
+    <script src="../../assets/js/jquery-3.4.1.min.js"></script>
+    <link rel="stylesheet" href="../../assets/bootstrap/js/bootstrap.min.js">
+    <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css">
+
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
+
 	<script>
         window.onload = function(){
-            $('body').fadeIn(350);
+            $('body').fadeIn(100);
         }
     </script>
     <style>
         body{
             display: none;
         }
+        p{
+            font-size: 1.30rem;
+            font-family: 'PT Sans', sans-serif;
+            text-indent: 5%;
+        }
+        h1{
+            text-transform: uppercase;
+            font-family: 'PT Sans', sans-serif;
+        }
     </style>
 </head>
 
 <body style="background-color: white !important;">
-        <h1>Aprensentação</h1>
+        <div class="container-fluid">
+            <div class="row mark">
+                <div class="col-sm-12 col-xs-12 col-lg-12 col-md-12 text-center">
+                    <h1>Apresentação</h1>
+                </div>
+            </div>
+        </div>
         <p align="justify">O PROJETO “É TEMPO DE APRENDER I e II” PRODUÇÃO DE CONTEÚDOS DIGITAIS PARA ALFABETIZAÇÃO
             DE
             JOVENS E ADULTOS teve início em agosto de 2017, através do PROGRAMA
