--- a/tempodeaprender/index.html
+++ b/tempodeaprender/index.html
@@ -5,7 +5,7 @@
 		<title>Home | É tempo de aprender</title>
 		<link rel="stylesheet" href="estilo/introducao.css" type="text/css"/>
 		<link rel="shortcut icon" href="imagem/favicon.ico" />
-		<link rel="stylesheet" href="estilo/bootstrap.min.css">
+		<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
 	</head>
 	<body>
