a ideia de simbolo - parcial

--- a/tempodeaprender/conteudo/introducao/1.html
+++ b/tempodeaprender/conteudo/introducao/1.html
@@ -15,7 +15,7 @@
 
 	<script>
         window.onload = function(){
-            $('body').fadeIn(100);
+            $('body').show(100);
         }
     </script>
     <style>
