--- a/tempodeaprender/conteudo/introducao/2.html
+++ b/tempodeaprender/conteudo/introducao/2.html
@@ -28,7 +28,7 @@
     </style>
     <script>
         window.onload = function () {
-            $('body').fadeIn(200);
+            $('body').show(200);
         }
     </script>
 
