mudança de fonte

--- a/tempodeaprender/conteudo/introducao/2.html
+++ b/tempodeaprender/conteudo/introducao/2.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="../../assets/bootstrap/js/bootstrap.min.js">
     <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css">
 
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Neucha&display=swap" rel="stylesheet">
     </script>
     <style>
         body {
@@ -20,9 +21,11 @@
         }
         h1{
             text-transform: uppercase;
+            font-family: 'Permanent Marker', cursive;
         }
         p{
-            font-size: 1.3rem;
+            font-size: 1.45rem;
+            font-family: 'Neucha', cursive;
             text-indent: 5%;
         }
     </style>
