--- a/tempodeaprender/conteudo/introducao/1.html
+++ b/tempodeaprender/conteudo/introducao/1.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="../../assets/bootstrap/js/bootstrap.min.js">
     <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css">
 
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans&display=swap" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Neucha&display=swap" rel="stylesheet">
 	<script>
         window.onload = function(){
             $('body').show(100);
@@ -23,13 +24,13 @@
             display: none;
         }
         p{
-            font-size: 1.30rem;
-            font-family: 'PT Sans', sans-serif;
+            font-size: 1.45rem;
+            font-family: 'Neucha', cursive;
             text-indent: 5%;
         }
         h1{
             text-transform: uppercase;
-            font-family: 'PT Sans', sans-serif;
+            font-family: 'Permanent Marker', cursive;
         }
     </style>
 </head>
