--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li><a href="https://emanoellucasml.github.io/empresa">Empresa</a></li>
         <li><a href="https://emanoellucas.herokuapp.com" target="_blank">Empresa1</a></li>
         <li><a href="https://emanoellucasml.github.io/tempodeaprender">É tempo de aprender</a></li>
+        <li><a href="https://emanoellucasml.github.io/arte">Arte</a></li>
     </ul>
 </body>
 </html>
