--- a/tempodeaprender/conteudo/introducao/2.html
+++ b/tempodeaprender/conteudo/introducao/2.html
@@ -193,7 +193,7 @@
     <p align="justify">
     
         Foi pensando nessas pessoas, usuários habituais
-        dessas mídias, que desenvolvemos o aplicativo “É tempo
+        dessas mídias, que desenvolvemos o objeto de aprendizagem “É tempo
         de aprender”, a ser disponibilizado gratuitamente, com
         a certeza de que o que produzimos nos idos de 2000
         ainda é pertinente frente ao elevado número de
